--- a/www/templates/gospel/gospel-Jesus.html
+++ b/www/templates/gospel/gospel-Jesus.html
@@ -41,8 +41,8 @@
   </div>
 </div>
 
-<div class="button-bar padding">
-  <button class="button button-full button-stable" ng-click="modal.show()">
+<div class="recite-btn">
+  <button class="button button-positive button-outline button-block icon-left ion-ios7-paper-outline col col-50 col-offset-25" ng-click="modal.show()">
     Recite Example
   </button>
 </div>
