--- a/www/templates/gospel/recite/recite-God.html
+++ b/www/templates/gospel/recite/recite-God.html
@@ -1,7 +1,7 @@
 <ion-modal-view>
   <ion-header-bar class="bar bar-header bar-positive">
+    <button class="button button-clear button-primary" ng-click="modal.hide()"><i class="ion-close-round recite-close-btn"></i></button>
     <h1 class="title">Recite Example</h1>
-    <button class="button button-clear button-primary" ng-click="modal.hide()">Done</button>
   </ion-header-bar>
 
   <ion-content class="recite-example">
