--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -3,7 +3,7 @@
   Each tab's child <ion-nav-view> directive will have its own 
   navigation history that also transitions its views in and out.
 -->
-<ion-tabs class="tabs-icon-top tabs-stable">
+<ion-tabs class="tabs-icon-top tabs-dark">
 
   <!-- Gospel Tab -->
   <ion-tab title="The Gospel" icon="icon ion-person-add" href="#/tab/dash">
